!meta!
title: Santa Cruz Hike 260522
[img, src: "images/hike-260522/", alt: ""|]
!meta!

[style|
	.img-group {
	  display: flex;
	  flex-direction: column;
	}
	.img-group div {
	  flex: 1;
	}
	.img-group img {
	  max-width: 50%;
	}
]

[h2|Santa Cruz Hike 260522]

[p|Boy this was a long hike! :D]
[p|I think it ended up being about 5 and a half hours of hiking, exploring, and more hiking. A friend invited me to check out a nice boulder that they thought I might like to climb, but we ended up getting very distracted by a curious stone brickwork structure in the woods nearby.]

[p|First of all, some little diagrams because otherwise some of the photos of the ruins won't really make sense :P]

[img, src: "images/hike-260522/diagram-top.jpg", alt: "diagram of the ruins: from left to right, large chamber, wall, three narrower chambers, wall, large chamber"|]

[p|This shows the rough layout of the ruins from above, with an intact larger chamber with three small entry holes at ground level, then a large wall, then three smaller chambers with one entry each, another wall, and then a final large chamber with a crumbled wall.]

[img, src: "images/hike-260522/diagram-side.jpg", alt: "simple diagram of the walls from the side, showing the left wall as being built into the hill and the right wall as freestanding"|]

[p|The left wall in this diagram corresponds to the top of the first diagram, showing that one side of the ruin was built into a large hill, and the opposite side was freestanding.]

[img, src: "images/hike-260522/pit-1-above.jpg", alt: "weird brickwork pit from above"|]

[p|I really should have taken more pictures inside the pit, because it's really difficult to get a good sense of scale from above! This pit, the intact one, had walls around 5 meters high, made of an outer layer of brick which was partially crumbled surrounding an inner construction of large stone blocks.]

[img, src: "images/hike-260522/pit-wall-above.jpg", alt: "the pit wall from above"|]

[p|Again, scale is tricky, but this is the top of one of the seperating walls, made of larger stones fit together with mortar. It was around 1.5 meters wide.]

[img, src: "images/hike-260522/stone-wall.jpg", alt: "large stone wall from the side"|]

[p|This was a smaller stone wall on the southern side (to the right of the top-down diagram) of the ruins, which seemed to be a retaining wall for the south side of the hill?]

[p|There were also [em|tons] of bricks of various sizes and colors nearby (to the south of the ruins, just south of the retaining wall), and some even had writing on them!]

[div, class: "img-group"|
	[div|[img, src: "images/hike-260522/brick-carr.jpg", alt: "a brick with the writing carr on it"|]]
	[div|[img, src: "images/hike-260522/brick-channel.jpg", alt: "a brick with a channel on it"|]]
	[div|[img, src: "images/hike-260522/brick-com.jpg", alt: "a brick with the writing com on it"|]]
	[div|[img, src: "images/hike-260522/brick-fost.jpg", alt: "a brick with the writing fost on it"|]]
	[div|[img, src: "images/hike-260522/brick-fused.jpg", alt: "two bricks fused together"|]]
	[div|[img, src: "images/hike-260522/brick-owe.jpg", alt: "a brick with the writing owe on it"|]]
	[div|[img, src: "images/hike-260522/brick-tg6aio.jpg", alt: "a brick with the writing tg6aio on it?"|]]
	[div|[img, src: "images/hike-260522/brick-carr.jpg", alt: "a brick with the writing carr on it"|]]
	[div|[img, src: "images/hike-260522/brick-channel.jpg", alt: "a brick with a channel on it"|]]
	[div|[img, src: "images/hike-260522/brick-com.jpg", alt: "a brick with the writing com on it"|]]
	[div|[img, src: "images/hike-260522/brick-fost.jpg", alt: "a brick with the writing fost on it"|]]
	[div|[img, src: "images/hike-260522/brick-fused.jpg", alt: "two bricks fused together"|]]
	[div|[img, src: "images/hike-260522/brick-owe.jpg", alt: "a brick with the writing owe on it"|]]
	[div|[img, src: "images/hike-260522/brick-tg6aio.jpg", alt: "a brick with the writing tg6aio on it?"|]]
]

[p|The reason we originally went on this hike was partially to check out a large boulder with a tree growing on it, which was very cool looking (and potentially a fun climbing spot?)]

[img, src: "images/hike-260522/boulder-tree-branches.jpg", alt: "a tree on a boulder, partially hidden by underbrush"|]
[img, src: "images/hike-260522/boulder-tree-sunrays.jpg", alt: "the tree from a more clear angle, on top of the boulder, with the sun shining through the branches"|]

[p|We spent a couple hours looking at the hill ruins, but we eventually moved on and found some similar stone walls in a nearby field, as well as a sign which read "No hunting". We think the ruins in the field might have been used for cattle in some way, but we're not sure...]


[img, src: "images/hike-260522/sign-no-hunting.jpg", alt: "sign on a thick wooden post which read: no hunting"|]
[img, src: "images/hike-260522/cow-pen-wall-1.jpg", alt: "a stone wall in a field"|]
[img, src: "images/hike-260522/cow-pen-wall-2.jpg", alt: "another stone wall in the field"|]

[p|A reason we think these structures may have had to do with cattle was a trough nearby.]

[img, src: "images/hike-260522/cow-pen-trough.jpg", alt: "a concrete cattle trough"|]

[p|There was also another similar structure nearby, though it was a bit more overgrown.]

[img, src: "images/hike-260522/cow-pen-2.jpg", alt: "another stone walled structure, this time very hidden in some undergrowth"|]

[p|We walked away from the structures and up a hill, where I took this series of photos. I started looking back the way we came, and panned right.]

[img, src: "images/hike-260522/pano-pt-1.jpg", alt: "a trail going back down into a field"|]
[img, src: "images/hike-260522/pano-pt-2.jpg", alt: "panned right: field and forest"|]
[img, src: "images/hike-260522/pano-pt-3.jpg", alt: "panned perpendicular to the trail we were on: more forest"|]

[p|We kept walking along the trail, and though there were no other significant ruins, it was still a very pleasant hike :3]

[img, src: "images/hike-260522/oak-tree-large.jpg", alt: "a large oak tree"|]
[img, src: "images/hike-260522/dead-tree.jpg", alt: "a bone-white dead tree"|]
[img, src: "images/hike-260522/random-hazard-sign.jpg", alt: "random hazard sign by the trail"|]
[img, src: "images/hike-260522/fields-1.jpg", alt: "coastal fields"|]
[img, src: "images/hike-260522/fields-2.jpg", alt: "more coastal fields"|]
[img, src: "images/hike-260522/bay-tree-fallen-dark.jpg", alt: "a fallen bay tree we passed in the dark on our way back"|]
[img, src: "images/hike-260522/horizon-dark.jpg", alt: "the horizon lit up by the lights of santa cruz as we finished out hike"|]

[p|This was a super fun hike, and I'm really so curious about the ruins we found! My best (and really only) guess is that the big rooms were kilns? There were some bricks that looks like refractory bricks, and some had slag on them which fused them together which made it seem like something was being heated to very high temperatures, but they could have also just used a weird mortar that I don't know about. If you've got any ideas, please let me know!]
