!meta!
title: Hiking
!meta!

[h2|Some hikes I've been on recently]

[div, class: "break"|]

[p|I also occasionally find [a, href: "mushrooms.html"|mushrooms] on my hikes :3]

[div, class: "break"|]

[p|211021 - [a, href: "midnight_hike_211021.html"|Midnight Hike]]
[p|080421 - [a, href: "strawberry_canyon_080421.html"|Strawberry Canyon]]
[p|260321 - [a, href: "backyard_hike_260321.html"|Backyard Hike]]
[p|200221 - [a, href: "marin_headlands_200221.html"|Marin Headlands]]
