!meta!
title: Hiking
!meta!

[h2|Some hikes I've been on recently]


[p|I also occasionally find [a, href: "mushrooms.html"|mushrooms] on my hikes :3]

[p, class: "listing"|[a, href: "hike-260522.html"|Santa Cruz Hike] [span|260522]]
[p, class: "listing"|[a, href: "midnight_hike_211021.html"|Midnight Hike] [span|211021]]
[p, class: "listing"|[a, href: "strawberry_canyon_080421.html"|Strawberry Canyon] [span|080421]]
[p, class: "listing"|[a, href: "backyard_hike_260321.html"|Backyard Hike] [span|260321]]
[p, class: "listing"|[a, href: "marin_headlands_200221.html"|Marin Headlands] [span|200221]]
