!meta!
title: Home
static: true
!meta!

[h2|Hello there]

[p|Thank you for visiting my humble virtual abode. This site will serve as a space for me to talk about my [a, href: "projects.html"|projects] and [a, href: "thoughts.html"|thoughts], as well as a personal knowledge base in the form of the [a, href: "wiki.html"|wiki] page. It is inspired by many sites from the [a, href: "https://merveilles.town/about"|Town of Merveilles] and the [a, href: "https://webring.xxiivv.com/#icons"|Webring]]

[p|Below is a cute little search bar utilizing [a, href: "https://merveilles.town/@cblgh"|Alexander's] search engine, [a, href: "https://lieu.cblgh.org/"|Lieu]!]

<form method="GET" action="https://lieu.cblgh.org/">
    <!-- replace the value with the domain of your own site -->
    <input type="hidden" value="mineralexistence.com" name="site">
    <label for="site-search">Looking for something?</label><br />
    <input id="site-search" name="q" placeholder="Search">
    <button type="submit">Search</button>
</form>

[p|I still don't have an especially insteresting way to organize my pages ( I'm thinking something with graphs for the future :D ), so here's a list of all orphaned pages from this page. Over time this list will change as I find better ways of organizing things, but for now, here it is. Enjoy, and have fun finding the rest of the pages on this site :3]
{{stats}}

[p|And because I find myself needing to check recently update pages a lot for debugging, here are the three most recently updated pages:]

{{latest}}
