!meta!
title: Ideas
!meta!

[h2|Ideas]

[p|I often think of [i|great] ideas for pages to add to this site... and then promptly forget them. Hopefully this list should help me with that :D]

[ul|
	[del|[li|List of cool websites]]
	[li|Thoughts on user tracking]
	[li|Dwarf fortress intro]
	[li|Casio watch breakdown]
	[li|Common uxn patterns & pitfalls]
]
