!meta!
template: center
title: Index
!meta!

[h3|The colored sands in their patterns, the fluted and scalloped canyon walls, the volcanoes rising right through the sky, the rubbled rock of the chaotic terrain, the infinity of craters, ringed emblems of the planet’s beginning … Beautiful, or harsher than that: spare, austere, stripped down, silent, stoic, rocky, changeless. Sublime. The visible language of nature’s [a, href: "home.html"|mineral existence]]
[p|Kim Stanley Robinson, [em|Green Mars]]
