!meta!
title: Inventory
!meta!

[h2|Inventory]

[p|I try to reduce how much stuff I have, but as with anything, it's a process :)]

[h3|Everyday items:]

[div, class: "block"|
	[img, class: "third left", loading: "lazy", src: "images/inventory/corne.jpg", alt: "my lovely corne keyboard v2.1"|]
	[b|[p|[a, href: "https://github.com/foostan/crkbd"|Corne Keyboard (v2.1)]]]
	[p|This was a fun project and I got to practice some soldering skills! I don't use it a huge amount, mostly because I love the keyboard my laptop has and don't run it with a monitor that often.]
]

[div, class: "block"|
	[img, class: "third left", loading: "lazy", src: "images/inventory/field-notes.jpg", alt: "field notes special edition yosemite memo notebook"|]
	[b|[p|[a, href: "https://fieldnotesbrand.com/"|Field Notes] U.S. National Parks special edition memo notebook]]
	[p|I've had a Field Notes memo book since I was in preschool; I think they're great! The memo books especially are convinient because they can actually fit into a pocket without too much trouble, so they're easy to bring everywhere.]
]

[div, class: "block"|
	[img, class: "third left", loading: "lazy", src: "images/inventory/space-pen.jpg", alt: "black fisher space pen"|]
	[b|[p|[a, href: "https://fieldnotesbrand.com/products/space-pen"|Fisher space pen]]]
	[p|A very nice pen I was gifted a few years ago. I haven't run out of ink yet, but when I do it's easy to get more!]
]

[div, class: "block"|
	[img, class: "third left", loading: "lazy", src: "images/inventory/watch.jpg", alt: "a casio calculator watch on my wrist"|]
	[b|[p|[a, href: "casio.html"|Casio CA53W-1 calculator watch]]]
	[p|Another item I've had forever, if you're curious about how to change the invert the display you can read my page on the subject :)]
]

[div, class: "block"|
	[img, class: "third left", loading: "lazy", src: "images/inventory/kindle.jpg", alt: "the best kindle ever made, the kindle 4 paperwhite, in black"|]
	[b|[p|[a, href: "https://www.ebay.com/sch/i.html?_from=R40&_trksid=p2380057.m570.l1313&_nkw=kindle+4&_sacat=0"|Kindle 4]]]
	[p|I personally think this or the first kindle touch are some of the greatest pieces of consumer electronics ever made. The kindle touch especially has some crazy features (like free cell service forever?!), but I mostly find myself using the Kindle 4 pictured.]
]

[div, class: "block"|
	[img, class: "third left", loading: "lazy", src: "images/inventory/midori.jpg", alt: "a midori notebook, with a red ribbon pageholder, a small tag on the upper-right that says 2021-, and the midori MD logo imprinted in the middle right of the cover"|]
	[b|[p|[a, href: "https://www.midori-japan.co.jp/md/en/products/mdnote/#&gid=4&pid=1"|Midori MD A6 notebook]]]
	[p|Just a really solid notbook when I want to sit down and write something. It's almost small enough to fit in a pocket, but not quite (that role is still reserved for my Field Notes books anyway)]
]

[hr, style: "margin-top:4ex"|]

[h3|Computers:]
[ul|
	[li|Sinclair: Thinkpad T420s running [a, href: "https://arcolinux.com/"|Arco] (more info [a, href: "software.html"|here])]
	[li|Demian: [a, href: "https://www.raspberrypi.org/products/raspberry-pi-4-model-b/"|Raspberry pi 4] running [a, href: "https://www.raspberrypi.org/software/operating-systems/"|Pi OS Lite]]
	[li|[a, href: "bucephalus.html"|Bucephalus]: [a, href: "https://www.raspberrypi.org/products/raspberry-pi-4-model-b/" |Raspberry pi 4] running [a, href: "plan9.html"|9front]]
]

[h3|Fun Stuff:]
[ul|
	[li|[a, href: "https://www.thelightphone.com/"|Light Phone II]]
	[li|Nintendo Switch]
	[li|[a, href: "camera.html"|Kodak No. 2 Folding Autographic Brownie]]
]
