!meta!
title: Inventory
!meta!

[h2|Inventory]

[p|I try to reduce how much stuff I have, but as with anything, it's a process :)]

[h3|Everyday items:]

[div, class: "row"|
	[img, class: "third", style: "margin-right:1em;", loading: "lazy", src: "images/inventory/f3.jpg", alt: "a black nikon F3/T"|]
	[p|[b|[a, href: "f3.html"|Nikon F3/T]] A gift from my father, this is one of the most satisfying pieces of hardware I've ever held. It was made in 1982 and was bought as a spare by professional photographer who never ended up using it. I've shot a total of 73 photos on it so far, all yet to be developed. When I get them developed, I'll put some here :>]
]

[div, class: "row"|
	[img, class: "third", style: "margin-right:1em;", loading: "lazy", src: "images/inventory/mdr7506.jpg", alt: "pair of Sony MDR7506 headphones"|]
	[p|[b|[a, href: "https://pro.sony/ue_US/products/headphones/mdr-7506"|Sony MDR7506]] These are actually the first headphones I've ever bought! The 7506's are classic headphones for reference work, and they're nearly perfect for me. They fold up nicely and can take some abuse (both good for when I need to shove them into my backpack when I'm packing quickly), sound as good to me as headphones worth thirty times their price, and replacement parts for them are everywhere.]
]

[div, class: "row"|
	[img, class: "third", style: "margin-right:1em;", loading: "lazy", src: "images/inventory/t7.jpg", alt: "Samsung T7 1 terabyte SSD"|]
	[p|[b|[a, href: "https://www.samsung.com/us/computing/memory-storage/portable-solid-state-drives/portable-ssd-t7-usb-3-2-1tb--gray--mu-pc1t0t-am/"|Samsung T7 1TB SSD]] Just a nice little one terabyte external SSD. I've never had any problems with it, and holy shit a terabyte is a lot of storage! This drive has more space than all of my previous computers combined... I've got the entirety of Steven Universe, Game of Thrones, a ton of movies, 70+ gigabytes of music (thanks Devine!), and I still have space left over!]
]

[div, class: "row"|
	[img, class: "third", style: "margin-right:1em;", loading: "lazy", src: "images/inventory/kindle.jpg", alt: "the best kindle ever made, the kindle 4 paperwhite, in black"|]
	[p|[b|[a, href: "https://www.ebay.com/sch/i.html?_from=R40&_trksid=p2380057.m570.l1313&_nkw=kindle+4&_sacat=0"|Kindle 4]] I personally think this or the first kindle touch are some of the greatest pieces of consumer electronics ever made. The kindle touch especially has some crazy features (like free cell service forever?!), but I mostly find myself using the Kindle 4 pictured.]
]

[div, class: "row"|
	[img, class: "third", style: "margin-right:1em;", loading: "lazy", src: "images/inventory/midori.jpg", alt: "a midori notebook, with a red ribbon pageholder, a small tag on the upper-right that says 2021-, and the midori MD logo imprinted in the middle right of the cover"|]
	[p|[b|[a, href: "https://www.midori-japan.co.jp/md/en/products/mdnote/#&gid=4&pid=1"|Midori MD A6 notebook]] Just a really solid notbook when I want to sit down and write something, and it's small enough to fit in the front pocket of my overalls!]
]

[hr, style: "margin-top:4ex"|]

[h3|Computers:]
[ul|
	[li|Sinclair: Thinkpad T420s running [a, href: "https://arcolinux.com/"|Arco] (more info [a, href: "software.html"|here])]
	[li|Demian: [a, href: "https://www.raspberrypi.org/products/raspberry-pi-4-model-b/"|Raspberry pi 4] running [a, href: "https://www.raspberrypi.org/software/operating-systems/"|Pi OS Lite]]
	[li|[a, href: "bucephalus.html"|Bucephalus]: [a, href: "https://www.raspberrypi.org/products/raspberry-pi-4-model-b/" |Raspberry pi 4] running [a, href: "plan9.html"|9front]]
]

[h3|Fun Stuff:]
[ul|
	[li|[a, href: "https://www.thelightphone.com/"|Light Phone II]]
	[li|Nintendo Switch]
	[li|[a, href: "camera.html"|Kodak No. 2 Folding Autographic Brownie]]
]
